[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["Pavel Druzhinin <paveldroo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = { extras = ["standard"], version = "^0.17.6" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
