[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["Pavel Druzhinin <paveldroo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = { extras = ["standard"], version = "^0.17.6" }
SQLAlchemy = "^1.4.36"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
